--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@
                 <div class="single_place">
                     <div class="thumb">
                         <div>
-                            <a href="">
+                            <a href="{% url 'destinations:list' %}">
                                <img src="{{place.img.url}}" alt="">
                             </a>
                         </div>
