--- a/templates/orders.html
+++ b/templates/orders.html
@@ -29,8 +29,11 @@
                             </div>
                             <div class="col-lg-12">
                                 <div class="submit_btn">
-                                    <button class="boxed-btn4" type="submit">{% trans 'Submit' %}</button>
+                                    <button class="boxed-btn4" type="submit"
+                                            onclick="alertFunction()">{% trans 'Submit' %}
+                                    </button>
                                 </div>
+                                <p id="demo" style="display: none">csdcsdcds</p>
                             </div>
 
                         </div>
