--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,14 @@ body {
   font-style: normal;
 }
 
+.rgba {
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.rgba2 {
+  background: rgba(0, 0, 0, 0.4);
+}
+
 /* line 13, ../../Arafath/CL/December/231. Travel-02/HTML/scss/theme-default.scss */
 .img {
   max-width: 100%;
@@ -1287,18 +1295,19 @@ h3 {
 
 /* line 1, ../../Arafath/CL/December/231. Travel-02/HTML/scss/_slider.scss */
 .slider_bg_1 {
-  background-image: url(../img/banner/banner.png);
+  background-image: url(../img/banner/banner.jpg);
 }
 
 /* line 4, ../../Arafath/CL/December/231. Travel-02/HTML/scss/_slider.scss */
 .slider_bg_2 {
-  background-image: url(../img/banner/banner2.png);
+  background-image: url(../img/banner/banner2.jpg);
 }
 
 /* line 7, ../../Arafath/CL/December/231. Travel-02/HTML/scss/_slider.scss */
 .slider_bg_3 {
-  background-image: url(../img/banner/banner3.png);
+  background-image: url(../img/banner/banner3.jpg);
 }
+
 
 /* line 10, ../../Arafath/CL/December/231. Travel-02/HTML/scss/_slider.scss */
 .slider_area {
