--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 {% load i18n %}
 <!-- slider_area_start -->
 <div class="slider_area">
-    <div class="slider_active owl-carousel">
-        <div class="single_slider  d-flex align-items-center slider_bg_1 overlay">
+    <div class="slider_active owl-carousel slider_bg_1">
+        <div class="single_slider  d-flex align-items-center  overlay">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-12 col-md-12">
@@ -18,13 +18,13 @@
                 </div>
             </div>
         </div>
-        <div class="single_slider  d-flex align-items-center slider_bg_2 overlay">
+        <div class="single_slider rgba2  d-flex align-items-center slider_bg_2  overlay">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-12 col-md-12">
                         <div class="slider_text text-center">
-                            <h3>{% trans 'Australia'%}</h3>
-                            <p class="mt-5">{% trans 'Pixel perfect design with awesome contents'%}</p>
+                            <h3>{% trans 'Maldives'%}</h3>
+                            <p class="mt-5" style="color: #555555">{% trans 'Pixel perfect design with awesome contents'%}</p>
                             <a href="{% url 'destinations:list' %}" class="boxed-btn3">{% trans 'Explore Now'%}</a>
                         </div>
                     </div>
@@ -36,8 +36,8 @@
                 <div class="row align-items-center">
                     <div class="col-xl-12 col-md-12">
                         <div class="slider_text text-center">
-                            <h3>{% trans 'Switzerland'%}</h3>
-                            <p class="mt-5">{% trans 'Pixel perfect design with awesome contents'%}</p>
+                            <h3 style="color:white">{% trans 'Dybai'%}</h3>
+                            <p class="mt-5" style="color:#111">{% trans 'Pixel perfect design with awesome contents'%}</p>
                             <a href="{% url 'destinations:list' %}" class="boxed-btn3">{% trans 'Explore Now'%}</a>
                         </div>
                     </div>
