--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,9 +1,9 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
 {% block content %}
-{% load i18n %}
-     <!-- bradcam_area  -->
-     <div class="bradcam_area bradcam_bg_4" >
+    {% load i18n %}
+    <!-- bradcam_area  -->
+    <div class="bradcam_area bradcam_bg_4">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
@@ -16,120 +16,129 @@
         </div>
     </div>
     <!--/ bradcam_area  -->
-
     <!-- ================ contact section start ================= -->
-    <section class="contact-section" >
-            <div class="container">
-                <div class="d-none d-sm-block mb-5 pb-4">
-                    <div id="map" style="height: 480px; position: relative; overflow: hidden;"> </div>
-                    <script>
-                        function initMap() {
-                            var uluru = {
-                                lat: -25.363,
-                                lng: 131.044
-                            };
-                            var grayStyles = [{
-                                    featureType: "all",
-                                    stylers: [{
-                                            saturation: -90
-                                        },
-                                        {
-                                            lightness: 50
-                                        }
-                                    ]
-                                },
+    <section class="contact-section">
+{#        <div class="alert alert-success" role="alert">#}
+{#            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span#}
+{#                    aria-hidden="true">&times;</span></button>#}
+{#            Success! You have been signed in successfully!#}
+{#        </div>#}
+        <div class="container">
+            <div class="d-none d-sm-block mb-5 pb-4">
+                <div id="map" style="height: 480px; position: relative; overflow: hidden;"></div>
+                <script>
+                    function initMap() {
+                        var uluru = {
+                            lat: -25.363,
+                            lng: 131.044
+                        };
+                        var grayStyles = [{
+                            featureType: "all",
+                            stylers: [{
+                                saturation: -90
+                            },
                                 {
-                                    elementType: 'labels.text.fill',
-                                    stylers: [{
-                                        color: '#ccdee9'
-                                    }]
+                                    lightness: 50
                                 }
-                            ];
-                            var map = new google.maps.Map(document.getElementById('map'), {
-                                center: {
-                                    lat: -31.197,
-                                    lng: 150.744
-                                },
-                                zoom: 9,
-                                styles: grayStyles,
-                                scrollwheel: false
-                            });
-                        }
-                    </script>
-                    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfS1oRGreGSBU5HHjMmQ3o5NLw7VdJ6I&amp;callback=initMap">
-                    </script>
+                            ]
+                        },
+                            {
+                                elementType: 'labels.text.fill',
+                                stylers: [{
+                                    color: '#ccdee9'
+                                }]
+                            }
+                        ];
+                        var map = new google.maps.Map(document.getElementById('map'), {
+                            center: {
+                                lat: -31.197,
+                                lng: 150.744
+                            },
+                            zoom: 9,
+                            styles: grayStyles,
+                            scrollwheel: false
+                        });
+                    }
+                </script>
+                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfS1oRGreGSBU5HHjMmQ3o5NLw7VdJ6I&amp;callback=initMap">
+                </script>
 
+            </div>
+
+
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="contact-title">{% trans 'Get in Touch' %}</h2>
                 </div>
-
-
-                <div class="row" >
-                    <div class="col-12" id="contact-section">
-                        <h2 class="contact-title">{% trans 'Get in Touch' %}</h2>
-                    </div>
-                    <div class="col-lg-8" >
-                        <form method="post" action="#contact-section" >
-                            {% csrf_token %}
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="form-group">
-                                        <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Message'" placeholder=" {% trans 'Enter Message' %}"></textarea>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <input class="form-control valid" name="name" id="name" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" placeholder="{% trans 'Enter your name' %}">
-                                    </div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <input class="form-control valid" name="email" id="email" type="email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" placeholder="{% trans 'Email' %}">
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-group">
-                                        <input class="form-control" name="subject" id="subject" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Subject'" placeholder="{% trans 'Enter Subject' %}">
-                                    </div>
+                <div class="col-lg-8">
+                    <form method="POST">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="form-group">
+                                    <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9"
+                                              onfocus="this.placeholder = ''"
+                                              onblur="this.placeholder = 'Enter Message'"
+                                              placeholder=" {% trans 'Enter Message' %}"></textarea>
                                 </div>
                             </div>
-
-                            <div class="form-group mt-3">
-                                <button onclick="alertFunction()"
-                                        type="submit" class="button button-contactForm boxed-btn">{% trans 'Send' %}</button>
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <input class="form-control valid" name="name" id="name" type="text"
+                                           onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'"
+                                           placeholder="{% trans 'Enter your name' %}">
+                                </div>
                             </div>
-                            <p id="demo" style="display:none;">Send successfully</p>
-                        </form>
-                    </div>
-                    <div class="col-lg-3 offset-lg-1">
-                        <div class="media contact-info">
-                            <span class="contact-info__icon"><i class="ti-home"></i></span>
-                            <div class="media-body">
-                                <h3>{% trans 'Buttonwood, California' %}.</h3>
-                                <p>Rosemead, CA 91770</p>
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <input class="form-control valid" name="email" id="email" type="email"
+                                           onfocus="this.placeholder = ''"
+                                           onblur="this.placeholder = 'Enter email address'"
+                                           placeholder="{% trans 'Email' %}">
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-group">
+                                    <input class="form-control" name="subject" id="subject" type="text"
+                                           onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Subject'"
+                                           placeholder="{% trans 'Enter Subject' %}">
+                                </div>
                             </div>
                         </div>
-                        <div class="media contact-info">
-                            <span class="contact-info__icon"><i class="ti-tablet"></i></span>
-                            <div class="media-body">
-                                <h3>+1 253 565 2365</h3>
-                                <p>{% trans 'Mon to Fri 9am to 6pm' %}</p>
-                            </div>
+
+                        <div class="form-group mt-3">
+                            <button onclick="alertFunction()"
+                                    type="submit"
+                                    class="button button-contactForm boxed-btn">{% trans 'Send' %}</button>
                         </div>
-                        <div class="media contact-info">
-                            <span class="contact-info__icon"><i class="ti-email"></i></span>
-                            <div class="media-body">
-                                <h3>{% trans 'support@colorlib.com' %}</h3>
-                                <p>{% trans 'Send us your query anytime!' %}</p>
-                            </div>
+                    </form>
+                </div>
+                <div class="col-lg-3 offset-lg-1">
+                    <div class="media contact-info">
+                        <span class="contact-info__icon"><i class="ti-home"></i></span>
+                        <div class="media-body">
+                            <h3>{% trans 'Buttonwood, California' %}.</h3>
+                            <p>Rosemead, CA 91770</p>
+                        </div>
+                    </div>
+                    <div class="media contact-info">
+                        <span class="contact-info__icon"><i class="ti-tablet"></i></span>
+                        <div class="media-body">
+                            <h3>+1 253 565 2365</h3>
+                            <p>{% trans 'Mon to Fri 9am to 6pm' %}</p>
+                        </div>
+                    </div>
+                    <div class="media contact-info">
+                        <span class="contact-info__icon"><i class="ti-email"></i></span>
+                        <div class="media-body">
+                            <h3>{% trans 'support@colorlib.com' %}</h3>
+                            <p>{% trans 'Send us your query anytime!' %}</p>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-    <!-- ================ contact section end ================= -->
-{% endblock%}
-$('button').click(function() {
-  $(this).toggleClass('clicked');
-  $('button').text(function(i, text) {
-    return text === "Отправлено!" ? "Отправлено" : "Отправлено!";
-  });
-});
+        </div>
+    </section>
+{% endblock %}
+
+<!-- ================ contact section end ================= -->
