--- a/templates/orders.html
+++ b/templates/orders.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/base.html' %}
+
 {% load static %}
 {% load i18n %}
 {% block content %}
@@ -30,20 +31,9 @@
                                 </div>
                                 <div class="col-lg-12">
                                     <div class="submit_btn">
-                                        <button class="boxed-btn4" type="submit"
-                                                onclick="alertFunction()">{% trans 'Submit' %}
+                                        <button class="boxed-btn4" type="submit">{% trans 'Submit' %}
                                         </button>
-                                        {% if messages %}
-                                            <ul>
-                                                {% for message in messages %}
-                                                    <li onclick="alertFunction()">
-                                                        {% if message.tag == "SUCCESS" %}
-                                                            <div class="alert alert-success">{{ message }}</div>
-                                                        {% endif %}
-                                                    </li>
-                                                {% endfor %}
-                                            </ul>
-                                        {% endif %}
+
                                     </div>
                                 </div>
 
@@ -53,16 +43,5 @@
                 </div>
             </div>
         </div>
-        {% if messages %}
-            <ul onclick="alertFunction()">
-                {% for message in messages %}
-                    <li>
-                        {% if message.tag == "SUCCESS" %}
-                            {{ message }}
-                        {% endif %}
-                    </li>
-                {% endfor %}
-            </ul>
-        {% endif %}
     </div>
 {% endblock %}
